--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-gesture-handler": "1.3.0",
     "react-native-reanimated": "^1.1.0",
     "react-native-screens": "1.0.0-alpha.22",
+    "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.0",
