--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-elements": "^1.2.0",
     "react-native-gesture-handler": "1.3.0",
+    "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-reanimated": "^1.1.0",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-swipeout": "^2.3.6",
